[gd_scene load_steps=8 format=2]

[ext_resource path="res://Monkey/MonkeyBase.gd" type="Script" id=1]
[ext_resource path="res://assets/monkey_03.png" type="Texture" id=2]
[ext_resource path="res://assets/monkey_02.png" type="Texture" id=3]
[ext_resource path="res://assets/monkey_01.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.1935, 16.051 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.8396, 3.2778 )

[node name="MonkeyBase" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.16357, -5.79772 )
scale = Vector2( 0.72, 0.640001 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.2, 1.04 )

[node name="PlayerSensor" type="RayCast2D" parent="."]
position = Vector2( -21, 0 )
cast_to = Vector2( 0, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
modulate = Color( 0.137255, 0.317647, 0.866667, 1 )
position = Vector2( -6.92889, -5.59866 )
scale = Vector2( 0.34424, 2.99476 )
shape = SubResource( 3 )
one_way_collision = true
one_way_collision_margin = 2.0
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
